--- a/css/pages/skills.css
+++ b/css/pages/skills.css
@@ -6,7 +6,7 @@
 
 .skills h2 {
   margin: 0;
-  border-bottom: 1px solid #c06e52;
+  border-bottom: 1px solid #EEE;
   padding-bottom: 8px;
 }
 
@@ -25,7 +25,7 @@
 }
 
 .skill {
-  background-color: #c06e52;
+  background-color: #00ADB5;
   color: #ecebe4;
   text-align: right;
   font-size: 1rem;
