--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,15 @@
 
 body {
   margin: 0;
-  background: linear-gradient(#1f2021, #020d11);
+  background-color: #222831;
+  /* background: linear-gradient(#1f2021, #020d11); */
   padding: 40px 30px;
   border-radius: 5px;
   box-shadow: 2px 2px 10px;
 }
 
 h1, h2, ul, p, li, a {
-  color: #ecebe4;
+  color: #EEEEEE;
 }
 
 h1 {
@@ -36,24 +37,11 @@ h1 {
 }
 h2 {
   font-family: 'Work Sans', sans-serif;
+  font-variant: small-caps;
 }
 
 p, a, .skill {
   font-family: 'Roboto', sans-serif;
-}
-
-h2 {
-  border-bottom: 1px solid #c06e52;
-  padding-bottom: 8px;
-  font-weight: 300;
-  font-size: 1.8rem;
-  letter-spacing: 2px;
-}
-
-.about .letter-a {
-  font-size: 2.8rem;
-  font-weight: 200;
-  font-style: italic;
 }
 
 ul {
