--- a/css/components/button.css
+++ b/css/components/button.css
@@ -15,7 +15,7 @@
   outline: none;
   line-height: 42px;
   border: none;
-  background: linear-gradient(0deg, #00ADB5 0%, #00ADB5 100%);
+  background: linear-gradient(0deg, #63a46c 0%, #71b47a 100%);
 }
 
 .btn:hover {
@@ -47,18 +47,21 @@
 }
 
 .btn:active::before, .btn:active::after {
-  background: #00ADB5;
+  background: #63a46c;
   transition: 100ms ease all;
 }
 
-/* .btn a:active {
-  transition: 400ms ease all;
-  color: #C63D2F;
-} */
+.btn a {
+  color: #EEE;
+}
+
+.btn a:hover {
+  color: #EEE;
+}
 
 /* Class pour JS */
 
 .green-text {
-  color: #00ADB5;
+  color: #63a46c;
   transition: 100ms ease all;
 }
