--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url("components/button.css");
 
 @import url("pages/header.css");
+@import url("pages/description.css");
 @import url("pages/skills.css");
 @import url("pages/works.css");
 
