--- a/css/pages/skills.css
+++ b/css/pages/skills.css
@@ -4,12 +4,14 @@
 
 .bar-container {
   background-color: #ecebe4;
-  width: 80%;
+  width: 90%;
   border-radius: 15px;
+  box-shadow: 1px 1px 4px #181c23;
 }
 
 .skills h2 {
   margin: 0;
+  letter-spacing: .2em;
   border-bottom: 1px solid #EEE;
   padding-bottom: 8px;
 }
@@ -17,12 +19,13 @@
 .flex-skills {
   display: flex;
   margin-top: 24px;
+  justify-content: space-around;
 }
 
 .flex-skill {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 44%;
 }
 
 .skills p {
@@ -33,7 +36,7 @@
   background-color: #63a46c;
   color: #ecebe4;
   text-align: right;
-  font-size: 1rem;
+  font-size: .8rem;
   border-radius: 10px;
 }
 
