--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500;1,600&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap');
 /* Divers */
 
 /* body {
@@ -42,7 +44,7 @@ h2 {
 }
 
 p, a, .skill {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Hind Siliguri', sans-serif;
 }
 
 ul {
