--- a/css/pages/works.css
+++ b/css/pages/works.css
@@ -42,3 +42,7 @@
 .lettering {
   background-image: url("../../images/lettering.jpg");
 }
+
+.web-projects {
+  background-image: url("../../images/web-projects.png");
+}
