--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("components/button.css");
+@import url("components/paper-print.css");
 
 @import url("pages/header.css");
 @import url("pages/description.css");
