--- a/css/components/button.css
+++ b/css/components/button.css
@@ -5,6 +5,7 @@
   color: #ecebe4;
   border-radius: 5px;
   font-weight: 600;
+  font-size: 1em;
   letter-spacing: .02em;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -13,7 +14,6 @@
    7px 7px 20px 0px rgba(0,0,0,.1),
    4px 4px 5px 0px rgba(0,0,0,.1);
   outline: none;
-  line-height: 42px;
   border: none;
   background: linear-gradient(0deg, #63a46c 0%, #71b47a 100%);
 }
@@ -59,7 +59,7 @@
   color: #EEE;
 }
 
-/* Class pour JS */
+/* Class for JS */
 
 .green-text {
   color: #63a46c;
