--- a/css/pages/header.css
+++ b/css/pages/header.css
@@ -1,15 +1,76 @@
-nav ul, .icons {
+.header-container {
   display: flex;
+  justify-content: center;
+  gap: 6%;
+  padding: 10px;
+  background-color: #393E46;
+  border-radius: 5px;
 }
 
-.header-container {
+.hello {
+  position: relative;
+}
+
+.hello .hello-img {
+  filter: hue-rotate(300deg);
+  height: 500px;
+  border-top-right-radius: 180px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.hello h1 {
+  position: absolute;
+  bottom: 120px;
+  margin-top: 20px;
+  left: 160px;
+  font-weight: 600;
+  font-size: 3.6rem;
+  letter-spacing: .1rem;
+  line-height: 3.6rem;
+  text-shadow: 2px 2px 2px #222831;
+  z-index: 1;
+}
+
+.description .profile {
+  width: 300px;
+  height: 340px;
+  object-fit: cover;
+  /* box-shadow: 0 0 4px; */
+}
+
+.picture {
   margin: 30px 0;
   display: flex;
   justify-content: center;
-  gap: 10%;
-  padding: 40px 20px 0 20px;
-  background-color: #393E46;
-  border-radius: 5px;
+  gap: 6%;
+}
+
+nav ul, .icons {
+  display: flex;
+}
+.icons {
+  gap: 14%;
+  padding: 0;
+  font-size: 1.8rem;
+  text-shadow: 0 0 2px #222831;
+  z-index: 1;
+}
+
+.icons .icon:hover {
+  color: #63a46c !important;
+  transition: color .4s ease;
+  animation: bounce .6s;
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: translate(0);
+  }
+  50% {
+    transform: translateY(-6px);
+  }
 }
 
 nav ul {
@@ -21,52 +82,13 @@ nav ul {
   padding: 0;
   font-size: 2rem;
   letter-spacing: .1rem;
-  position:absolute;
-  top: -156px;
+  /* position:absolute;
+  top: -156px; */
   font-variant: small-caps;
 }
 
 nav ul a:hover {
   color: #63a46c;
-  transition: color 300ms ease;
-
-}
-
-.picture {
-  position: relative;
-}
-
-.picture h1 {
-  position: absolute;
-  margin-top: 20px;
-  right: -64px;
-  font-weight: 600;
-  font-size: 3.6rem;
-  letter-spacing: .1rem;
-  line-height: 3.6rem;
-  text-shadow: 2px 2px 2px #222831;
-}
-
-.picture img {
-  width: 360px;
-  height: 400px;
-  object-fit: cover;
-  border-top-right-radius: 180px;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  /* box-shadow: 0 0 4px; */
-}
-
-.icons {
-  justify-content: center;
-  gap: 14%;
-  padding: 0;
-  font-size: 1.8rem;
-}
-
-.icons .icon:hover {
-  color: #63a46c !important;
   transition: color 300ms ease;
 }
 
@@ -76,10 +98,7 @@ nav ul a:hover {
   justify-content: center;
   margin-top: 100px;
   position: relative;
-  height: 100%;
-  padding: 40px 20px 20px 40px;
-  position: relative;
-}
+  padding: 20px 10px 0px 20px}
 
 .about::before, .about::after {
   content: "";
@@ -121,3 +140,6 @@ nav ul a:hover {
   line-height: 1.6;
   font-size: 1.2rem;
 }
+
+
+/* Class for JS */
