--- a/css/pages/description.css
+++ b/css/pages/description.css
@@ -8,7 +8,9 @@
   border: 2px solid #393E46;
 }
 
-.description p {
+.description-text {
+  display: flex;
+  flex-direction: column;
   width: 40%;
 }
 
