--- a/css/components/button.css
+++ b/css/components/button.css
@@ -15,7 +15,7 @@
    4px 4px 5px 0px rgba(0,0,0,.1);
   outline: none;
   border: none;
-  background: linear-gradient(0deg, #63a46c 0%, #71b47a 100%);
+  background: linear-gradient(0deg, #183f3b 0%, #199191 100%);
 }
 
 .btn:hover {
