--- a/css/pages/header.css
+++ b/css/pages/header.css
@@ -2,7 +2,9 @@
   display: flex;
   justify-content: center;
   padding: 10px;
-  background-color: #393E46;
+  /* background-color: #393E46; */
+  background-image: url("../../images/blue-back.jpg");
+  filter: hue-rotate(330deg);
   border-radius: 5px;
   position: relative;
 }
@@ -55,7 +57,7 @@ nav ul, .icons {
 }
 
 .icons .icon:hover {
-  color: #63a46c !important;
+  color: #78cbc3 !important;
   transition: color .4s ease;
   animation: bounce .6s;
 }
@@ -88,7 +90,7 @@ nav ul {
 }
 
 nav ul a:hover {
-  color: #63a46c;
+  color: #78cbc3;
   transition: color 300ms ease;
 }
 
