--- a/css/pages/works.css
+++ b/css/pages/works.css
@@ -1,6 +1,6 @@
 .works h2 {
   letter-spacing: .2em;
-  margin: 0;
+  margin-bottom: 20px;
   border-bottom: 1px solid #EEE;
   padding-bottom: 8px;
 }
@@ -9,11 +9,10 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 6%;
+  gap: 20px;
 }
 
 .card {
-  margin-top: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
