--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ a {
     flex-direction: column;
   }
   .hello .hello-img {
-    height: 300px;
+    height: 400px;
     object-fit: cover;
     object-position: top;
     margin: 0 auto;
@@ -89,12 +89,12 @@ a {
     display: flex;
   }
   .hello h1 {
-    bottom: 10px;
-    left: 180px;
+    bottom: 120px;
+    left: 80px;
     font-size: 2.8rem;
   }
   .about {
-    width: 60%;
+    width: 82%;
     margin: 20px auto;
     padding: 0;
   }
@@ -114,5 +114,15 @@ a {
   }
   .description-text {
     width: 100%;
+  }
+
+  .card {
+    width: 140px;
+    height: 140px;
+    max-width: 140px;
+    max-height: 140px;
+  }
+  .card a {
+    font-size: 1.8em;
   }
 }
